--- a/WebApplication1/nbproject/project.properties
+++ b/WebApplication1/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.jsf-impl-2.2.20.jar=D:\\CN Java\\Libraries\\jsf-impl-2.2.20.jar
 file.reference.mysql-connector-j-8.4.0.jar=D:\\CN Java\\Libraries\\mysql-connector-j-8.4.0.jar
@@ -38,9 +39,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${libs.JSF-2.2..classpath}:\
-    ${file.reference.jsf-impl-2.2.20.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.jsf-impl-2.2.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -67,7 +68,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
