--- a/WebApplication1/nbproject/project.properties
+++ b/WebApplication1/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.jsf-impl-2.2.20.jar=D:\\CN Java\\Libraries\\jsf-impl-2.2.20.jar
+file.reference.jstl-1.2.jar=D:\\CN Java\\Servlet-JSP_File 2_ Web app\\Servlet-JSP_File 2_ Web app\\DemoSlight_C1-2.8\\src\\main\\webapp\\WEB-INF\\lib\\jstl-1.2.jar
 file.reference.mysql-connector-j-8.4.0.jar=D:\\CN Java\\Libraries\\mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${libs.JSF-2.2..classpath}:\
-    ${file.reference.jsf-impl-2.2.20.jar}
+    ${file.reference.jsf-impl-2.2.20.jar}:\
+    ${file.reference.jstl-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
